force-app/main/default/objects/InstallationContract__c/InstallationContract__c.object-meta.xml
<CustomObject>
    <label>Contrato de Instalación</label>
    <nameField>
        <label>Contrato de Instalación Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contratos de Instalacion</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>