force-app/main/default/objects/InstallationContract__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contratos de Instalacion</relationshipLabel>
    <relationshipName>Contratos_de_Instalacion</relationshipName>
    <type>Lookup</type>
</CustomField>