force-app/main/default/objects/InstallationContract__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En proceso</fullName>
            </value>
            <value>
                <fullName>Pendientes de revisión</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>