force-app/main/default/objects/InstallationContract__c/fields/FechaDeInstalacion__c.field-meta.xml
<CustomField>
    <fullName>FechaDeInstalacion__c</fullName>
    <label>Fecha de Instalacion</label>
    <type>Date</type>
</CustomField>